Fix Track spacing and make font smaller.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -30,8 +30,7 @@ h1 {
 }
 
 .Playlist {
-  width: 90%;
-  margin: 5%;
+  margin: 3%;
   display: flex;
   justify-content: space-between;
 }
