--- a/src/components/Results/Results.css
+++ b/src/components/Results/Results.css
@@ -5,6 +5,10 @@
     height: 1000px;
 }
 
+.Results h2 {
+    margin: 0;
+}
+
 @media only screen and (max-width: 1020px) {
     .SearchResults {
       width: 80%;
