--- a/src/components/Track/Track.css
+++ b/src/components/Track/Track.css
@@ -22,16 +22,17 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  justify-content: center;
-  height: 5rem;
+  justify-content: space-evenly;
+  height: 4rem;
 }
 
-.Track-info h3 {
-  margin-bottom: .22rem;
+.Track-info h4 {
+  margin: 0;
 }
 
 .Track-info p {
-  font-size: .83rem;
+  margin: 0;
+  font-size: .8rem;
   font-weight: 300;
   color: rgba(256, 256, 256, 0.8);
 }
